--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
 
     <!-------------------------------MAIN------------------------------>
-
     <main>
         <div class="container">
             <!--========================= LEFT ============================-->
@@ -246,7 +245,8 @@
                             <p>liked by <b>Ernest Achiever</b>and <b>2,323</b>others</p>
                         </div>
                         <div class="caption">
-                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="harsh-tag" >#lifeestyle</span>
+                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span
+                                    class="harsh-tag">#lifeestyle</span>
                             </p>
                         </div>
                         <div class="comments text-mued">
@@ -288,7 +288,8 @@
                             <p>liked by <b>Ernest Achiever</b>and <b>2,323</b>others</p>
                         </div>
                         <div class="caption">
-                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="harsh-tag" >#lifeestyle</span>
+                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span
+                                    class="harsh-tag">#lifeestyle</span>
                             </p>
                         </div>
                         <div class="comments text-mued">
@@ -330,7 +331,8 @@
                             <p>liked by <b>Ernest Achiever</b>and <b>2,323</b>others</p>
                         </div>
                         <div class="caption">
-                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="harsh-tag" >#lifeestyle</span>
+                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span
+                                    class="harsh-tag">#lifeestyle</span>
                             </p>
                         </div>
                         <div class="comments text-mued">
@@ -372,7 +374,8 @@
                             <p>liked by <b>Ernest Achiever</b>and <b>2,323</b>others</p>
                         </div>
                         <div class="caption">
-                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="harsh-tag" >#lifeestyle</span>
+                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span
+                                    class="harsh-tag">#lifeestyle</span>
                             </p>
                         </div>
                         <div class="comments text-mued">
@@ -414,7 +417,8 @@
                             <p>liked by <b>Ernest Achiever</b>and <b>2,323</b>others</p>
                         </div>
                         <div class="caption">
-                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="harsh-tag" >#lifeestyle</span>
+                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span
+                                    class="harsh-tag">#lifeestyle</span>
                             </p>
                         </div>
                         <div class="comments text-mued">
@@ -456,7 +460,8 @@
                             <p>liked by <b>Ernest Achiever</b>and <b>2,323</b>others</p>
                         </div>
                         <div class="caption">
-                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span class="harsh-tag" >#lifeestyle</span>
+                            <p><b>Lana Rose</b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span
+                                    class="harsh-tag">#lifeestyle</span>
                             </p>
                         </div>
                         <div class="comments text-mued">
@@ -485,7 +490,7 @@
                     <!---------------------- MESSAGES CAREGORY ---------------------------->
                     <div class="category">
                         <h6 class="active">Primary</h6>
-                        <h6 >general</h6>
+                        <h6>general</h6>
                         <h6 class="messages-requests">Requset(2)</h6>
                     </div>
                     <!---------------------- END MESSAGES CAREGORY ------------------------>
@@ -493,47 +498,179 @@
                     <div class="message">
                         <div class="profile-photo">
                             <img src="./images/profile-17.jpg" alt="">
+                            <div class=""></div>
                         </div>
                         <div class="message-body">
                             <h5>Edem Quist</h5>
                             <p class="text-bold">Just woke up brush</p>
                         </div>
                     </div>
-                    <!--------------------  END MESSAGES --------------------->
-                    <!--------------------  FRIEND REQUESTS  ----------------->
-                    <div class="friend-requests">
-                          <h4>Requests</h4>
-                          <div class="request">
-                            <div class="ifno">
-                                <div class="profile-photo">
-                                    <img src="./images/profile-13.jpg" alt="">
-                                </div>
-                                <div class="">
-                                    <h5>Hajia Bintu</h5>
-                                    <p class="text-muted">
-                                        8 mutual friends    
-                                    </p>
-                                    <div class="action">
-                                        <button class="btn btn-primary">
-                                            Accept
-                                        </button>
-                                        <button class="btn">
-                                            Decline
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                          </div>
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-17.jpg" alt="">
+                            <div class=""></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Edem Quist</h5>
+                            <p class="text-bold">Just woke up brush</p>
+                        </div>
                     </div>
-                    <!------------------ END FRIEND REQUESTS  ---------------->
-
-                    
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-17.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Edem Quist</h5>
+                            <p class="text-bold">Just woke up brush</p>
+                        </div>
+                    </div>
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-17.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Edem Quist</h5>
+                            <p class="text-bold">Just woke up brush</p>
+                        </div>
+                    </div>
                 </div>
+                <!--------------------  END MESSAGES --------------------->
+                <!--------------------  FRIEND REQUESTS  ----------------->
+                <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-13.jpg" alt="">
+                            </div>
+                            <div class="">
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-13.jpg" alt="">
+                            </div>
+                            <div class="">
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-13.jpg" alt="">
+                            </div>
+                            <div class="">
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!------------------ END FRIEND REQUESTS  ---------------->
             </div>
             <!-- ========================= END RIGHT  ============================ -->
 
         </div>
     </main>
+    <!---------------------------- END MAIN---------------------------->
+
+
+
+    <!-- ======================================== THME CUSTOMIZATION =================================-->
+    <div class="customize-theme">
+        <div class="card">
+            <h2>Customize your view</h2>
+            <p>Manage your font size , color , and background.</p>
+        </div>
+        <!-- -------------- FONT SIZES --------------------->
+        <div class="font-size">
+            <h4>Font Size</h4>
+            <div>
+                <h6>
+                    Aa
+                </h6>
+                <div class="choose-size">
+                    <span class="font-siz-1"></span>
+                    <span class="font-siz-2"></span>
+                    <span class="font-siz-3"></span>
+                    <span class="font-siz-4"></span>
+                    <span class="font-siz-5"></span>
+                </div>
+                <h3>Aa</h3>
+            </div>
+        </div>
+        <!-- ------------- END FONT SIZES ------------------>
+        <div class="color">
+            <h4>Color</h4>
+            <div class="choose-color">
+                <span class="color-1 active"></span>
+                <span class="color-2"></span>
+                <span class="color-3"></span>
+                <span class="color-4"></span>
+                <span class="color-5"></span>
+            </div>
+        </div>
+
+        <div class="background">
+            <h4>Background</h4>
+            <div class="choose-bg">
+                <div class="bg-1">
+                    <span></span>
+                    <h5 for="bg-1">Light</h5>
+                </div>
+                <div class="bg-2">
+                    <span></span>
+                    <h5 for="bg-2">Dim</h5>
+                </div>
+                <div class="bg-3">
+                    <span></span>
+                    <h5 for="bg-3">Lights Out</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ====================================== END THME CUSTOMIZATION ===============================-->
 </body>
 
 </html>
